[gd_scene load_steps=9 format=3 uid="uid://c2gspsx0d42uh"]

[ext_resource type="Script" path="res://Assets/Port v2/GB_port_5.gd" id="1_o7up5"]
[ext_resource type="Texture2D" uid="uid://dr8kif3xk2ef" path="res://Assets/Opdelt porte/greenapple_port_h.png" id="2_ji4fo"]
[ext_resource type="Texture2D" uid="uid://fob3ttumi237" path="res://Assets/Opdelt porte/greenapple_port_v.png" id="3_vow20"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rg1dm"]
size = Vector2(67, 20)

[sub_resource type="Animation" id="Animation_plafw"]
resource_name = "GB_port_open_5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_skxxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_gbeye"]
resource_name = "GB_port_close_5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46h5k"]
_data = {
"GB_port_close_5": SubResource("Animation_gbeye"),
"GB_port_open_5": SubResource("Animation_plafw"),
"RESET": SubResource("Animation_skxxb")
}

[node name="GB_port_5" type="StaticBody2D"]
script = ExtResource("1_o7up5")

[node name="GB_h_5" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_ji4fo")

[node name="GB_v_5" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_vow20")

[node name="GB_port_collision_5" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_rg1dm")

[node name="ap_GB_5" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_46h5k")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
